--- a/FakeWebsite/html/search.html
+++ b/FakeWebsite/html/search.html
@@ -12,10 +12,10 @@
     <script src="https://projects.cs.uaf.edu/redmine/attachments/download/559/Chart.js"></script>
 
     <!-- Bootstrap core CSS -->
-    <link href="https://projects.cs.uaf.edu/redmine/attachments/download/560/bootstrap.min.css" rel="stylesheet">
+    <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="https://projects.cs.uaf.edu/redmine/attachments/download/558/dashboard.css" rel="stylesheet">
+    <link href="dashboard.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -222,7 +222,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://projects.cs.uaf.edu/redmine/attachments/download/561/bootstrap.min.js"></script>
+    <script src="../dist/js/bootstrap.min.js"></script>
 
     <!-- LINKIFY ROWS ON TABLE-->
     <script>
