--- a/FakeWebsite/html/index.html
+++ b/FakeWebsite/html/index.html
@@ -127,7 +127,7 @@
 			    <h3 class="panel-title">New Facebook Notification</h3>
 			  </div>
 			  <div class="panel-body">
-			    You've made 3 new Facebook posts. <a href="result.html"> Click to review privacy settings. </a>
+			    Please enjoy the new colors! <a href="result.html"> Click to review privacy settings. </a>
 			  </div>
 			</div>
 
