--- a/FakeWebsite/html/index.html
+++ b/FakeWebsite/html/index.html
@@ -127,7 +127,7 @@
 			    <h3 class="panel-title">New Facebook Notification</h3>
 			  </div>
 			  <div class="panel-body">
-			    New Fonts will be coming soon! <a href="result.html"> Click to review privacy settings. </a>
+			    New Fonts are live! <a href="result.html"> Click to review privacy settings. </a>
 			  </div>
 			</div>
 
